Oauth2 Resource server change config to read scopes. AuthServer configuration in progress to generate refresh token